1.20.1 port and refactor